--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,12 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
+    "@testing-library/react": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "testing-library": "^0.0.2",
+    "vitest": "^1.5.0",
+    "vtest": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
