--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,8 +8,9 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest",
-    "jest": "jest"
+    "test": "vitest --ui",
+    "jest": "jest",
+    "coverage": "vitest run --coverage --ui"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -22,7 +23,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "testing-library": "^0.0.2",
-    "vitest": "^1.5.0",
     "vtest": "^1.1.0"
   },
   "devDependencies": {
@@ -31,6 +31,8 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.5.2",
+    "@vitest/ui": "^1.5.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -38,7 +40,7 @@
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
     "vite": "^5.2.0",
-    "vitest": "^0.34.1",
+    "vitest": "^1.5.2",
     "vitest-fetch-mock": "^0.2.2"
   }
 }
