--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
+      - name: install dependencies
+        run: npm
+      - name: Test and coverage
+        run: npx vitest --coverage.enabled true
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
