--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.5.0",
     "mongoose": "^7.4.1"
   },
   "devDependencies": {
