--- a/.github/workflows/sonarQub.yml
+++ b/.github/workflows/sonarQub.yml
@@ -1,4 +1,4 @@
-name: Build
+name: SonarQub Build
 
 on:
   push:
@@ -20,6 +20,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '20'
+      - name: Install dependencies
+        run: npm ci
+  
+      - name: Run vitest with coverage
+        run: npx vitest --coverage.enabled true
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
