--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=tomgame984_The-Neurons
 sonar.organization=tomgame984
 
+sonar.javascript.lcov.reportPaths=.Frontend/coverage/lcov.info
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=The-Neurons
 #sonar.projectVersion=1.0
