--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Run vitest with coverage
-        working-directory: Frontend
+        working-directory: ./Frontend
         run: npx vitest --coverage.enabled true
 
 
