--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Run vitest with coverage
-        run: npx vitest --coverage.enabled true
+        run: npm run vitest --coverage.enabled true
 
       - name: Upload coverage report
         if: always() 
