vitest commend amended.

--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm install
 
       - name: Run vitest with coverage
-        run: npx vitest --coverage.enabled true
+        run: npx vitest --coverage
 
       - name: Upload coverage report
         if: always() 
