--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -1,44 +1,52 @@
-name: Frontend Vitests with Coverage
-
+name: "Test"
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-        branches:
-            - main
+  pull_request:
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        branch:
+          - ${{ github.head_ref }}
+          - "main"
 
     permissions:
+      # Required to checkout the code
       contents: read
-      pull-requests: write
-
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Node.js
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ matrix.branch }}
+      - name: "Install Node"
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
-
-      - name: Install dependencies
+          node-version: "20.x"
+      - name: "Install Deps"
         run: npm install
-
-      - name: Run vitest with coverage
-        run: npx vitest --coverage
-
-      - name: Upload coverage report
-        if: always() 
-        uses:  davelosert/vitest-coverage-report-action@v2
+      - name: "Test"
+        run: npx vitest --coverage.enabled true
+      - name: "Upload Coverage"
+        uses: actions/upload-artifact@v4
         with:
-            name: 'Frontend'
-            json-summary-path: coverage/coverage-summary.json
-            json-final-path: coverage/coverage-final.json
-            working-directory: Frontend
+          name: coverage-${{ matrix.branch }}
+          path: coverage
 
-
+  report-coverage:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Download Coverage Artifacts"
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-${{ github.head_ref }}
+          path: coverage
+      - uses: actions/download-artifact@v4
+        with:
+          name: coverage-main
+          path: coverage-main
+      - name: "Report Coverage"
+        uses: davelosert/vitest-coverage-report-action@v2
+        with:
+          json-summary-compare-path: coverage-main/coverage-summary.json
