--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -30,17 +30,14 @@ jobs:
         run: npm install
 
       - name: Run vitest with coverage
-        run: |
-          cd Frontend
-          npx vitest --coverage
+        run: npx vitest --coverage
 
       - name: Upload coverage report
         if: always() 
         uses:  davelosert/vitest-coverage-report-action@v2
         with:
             name: 'Frontend'
-            json-summary-path: coverage/coverage-summary.json
-            json-final-path: coverage/coverage-final.json
-            working-directory: Frontend
+            json-summary-path: Frontend/coverage/coverage-summary.json
+            json-final-path: Frontend/coverage-final.json
 
 
