--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: SonarQub Build
+name: Build
 
 on:
   push:
@@ -20,11 +20,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - name: Install dependencies
-        run: npm ci
-  
-      - name: Run vitest with coverage
-        run: npx vitest --coverage.enabled true
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
