--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -30,15 +30,8 @@ jobs:
         run: npm install
 
       - name: Run vitest with coverage
-        run: npx vitest --coverage
-
-      - name: Upload coverage report
-        if: always() 
-        uses:  davelosert/vitest-coverage-report-action@v2
-        with:
-            name: 'Frontend'
-            json-summary-path: coverage/coverage-summary.json
-            json-final-path: coverage/coverage-final.json
-            working-directory: Frontend
+        run: 
+          cd Frontend
+          npx vitest
 
 
