--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -1,4 +1,4 @@
-name: Frontend Vitests with Coverage
+name: Frontend Vitest Framework
 
 on:
     push:
@@ -29,8 +29,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run vitest with coverage
-        run: 
+      - name: Run vitest
+        run: |
           cd Frontend
           npx vitest
 
