recerted to previous working commit 0af0bc43b91179a532d822cc6608478a14491755

--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -1,4 +1,4 @@
-name: Frontend Vitest Framework
+name: Frontend Vitests with Coverage
 
 on:
     push:
@@ -29,9 +29,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run vitest
-        run: |
-          cd Frontend
-          npx vitest
+      - name: Run vitest with coverage
+        run: npx vitest
 
 
