vitest command updated in yml to run in frontend only

--- a/.github/workflows/frontend_vitests_with_coverage.yml
+++ b/.github/workflows/frontend_vitests_with_coverage.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run vitest with coverage
-        run: npx vitest
+      - name: Run vitest 
+        run: |
+          cd Frontend && npx vitest
 
 
